Tiny fix for overflow and animation starting at +1
Tiny fix for overflow and animation starting at +1

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -449,6 +449,7 @@ html, body {
 
 #model-log-output-wrap {
   border: 1px solid  $gray-lighter;
+  overflow: auto;
 
   padding: 8px;
   max-height: 400px;
